# python_react_calculator

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  db.py  schema.sql
backend/app/controller/: app_controller_bp.py  auth_controller_bp.py
backend/app/dao/: operation_dao.py  record_dao.py  user_dao.py
backend/app/service/: operation_service.py  records_service.py  user_service.py
backend/tests/: conftest.py  test_app.py  test_auth.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/network/: api.ts
frontend/src/pages/: CalculatorView.tsx  LoginPage.tsx  MainPage.tsx  RegisterPage.tsx  UseRecords.tsx  calculatorStyles.css
